--- a/wiki/ClassBinderPartTwo.wiki
+++ b/wiki/ClassBinderPartTwo.wiki
@@ -3,7 +3,7 @@
 
 <wiki:toc max_depth=3/>
 
-This page is part two of the [ClassBinder ClassBinder documentation]. If you are not familiar with that material, this page will probably make little sense.
+*Achtung:* This page is part two of the [ClassBinder ClassBinder documentation]. If you are not familiar with that material, this page will probably make little sense.
 
 
 =Object Construction with or without `new`=
@@ -284,4 +284,3 @@ struct WeakJSClassCreator_Opt_ShallowBind< T >
 
 } } /* namespaces */
 }}}
-
