--- a/wiki/ClassBinderPartTwo.wiki
+++ b/wiki/ClassBinderPartTwo.wiki
@@ -262,11 +262,11 @@ print( my.nativeString, my2.nativeString ); // "bar bar" :(
 
 As of 20091018, `WeakJSClassCreator` supports a feature called "shallow binding". When this is enabled, it uses a much faster mechanism for converting from JS-to-Native `(T*)`, _but it also loses several features_ provided by the normal bindings:
 
-  * Uses `static_cast<>()` and is not strictly as type-safe as the normal mechanism. That said, in theory the pointers we cast _must_ be of the correct type (and _will_ be unless client code muddles with the binding data).
+  * It uses `static_cast<T*>(void*)` and is not strictly as type-safe as the normal mechanism. That said, in theory the pointers we cast _must_ be of the correct type (and _will_ be unless client code muddles with the binding data).
   * If the bound class inherits other bound classes, or will be inherited by bound classes or JS-side classes, not all features of inheritance will work. Notably (but not the only problem), inherited bound functions may not be visible in subclasses.
   * `NativeToJS()` cannot work for that type, as the native has no notion of a JS counterpart. This will prohibit conversion of native (`T*`) to their JS counterparts, e.g. for bound function arguments or return values.
   * Certain binding routines will fail with a compile-time error because they cannot function in shallow mode.
-  * Certain binding routines may trigger a JS exception at runtime because they cannot function in shallow mode (but cannot made the determination at compile-time, for unfortunate internal reasons).
+  * Certain binding routines may trigger a JS or native exception at runtime because they cannot function in shallow mode (but cannot make that determination at compile-time, for unfortunate internal reasons).
 
 Despite the daunting list of limitations, if the a bound class meets the following guidelines then this can be a useful (and "almost certainly safe") optimization to turn on:
 
